# cpp-http

./: .gitignore  CMakeLists.txt  README.md  TASKLIST.md
.cache/clangd/index/: client.cpp.0ECBDF7C1AA34D0E.idx  client.cpp.84072CBB8B2CB4F5.idx  client.cpp.F653782F96FE957C.idx  helper.cpp.35340580C3656DB4.idx  helper.cpp.A5D7F97F68CF89E8.idx  helper.cpp.E01E6413997B61DC.idx  helper.h.28E24AFD968A580F.idx  helper.h.9C5B9A2A8D01A906.idx  helper.h.CAC9350D4EE18AB8.idx  server.cpp.103FB7CB3B0AA31F.idx  server.cpp.40A33E7F17934DB3.idx  server.cpp.87603126FDC060C7.idx
doc/: docusaurus.config.ts  package-lock.json
doc/docs/notes/: _category_.json  cmake.md  cpp-general.md  cpp-network.md  cpp-threading.md  sockets-connectivity.md
doc/src/pages/: index.tsx
src/: http_tcpServer.cpp  http_tcpServer.h  server.cpp
src/chat/: server.cpp
src/helper/: helper.cpp
src/http/: http_tcpServer.cpp  http_tcpServer.h  server.cpp
src/playground/: client.cpp
src/socket/: client.cpp  helper.cpp  helper.h  server.cpp
